Bug#21039 Transaction cache not flushed after SELECT CREATE  - Add prelocking for stored procedures that uses sp or sf  - Update test result for sp_error(reported as bug#21294)  - Make note about new error message from sp-error(bug#17244)